[gd_scene load_steps=17 format=2]

[ext_resource path="res://images/pickle-spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://sounds/jump1.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/step4.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/running.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/slide1.wav" type="AudioStream" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool rim_light = false;
uniform float rim_thickness : hint_range(0, 40) = 5.0;
uniform float rim_intense : hint_range(0, 1) = 1.0;
uniform bool rim_extra_thick = false;

void light() {
	if (rim_light) {
		vec2 size = TEXTURE_PIXEL_SIZE * rim_thickness;
		float outline = texture(TEXTURE, UV + vec2(-size.x, 0)).a;
		outline *= texture(TEXTURE, UV + vec2(0, size.y)).a;
		outline *= texture(TEXTURE, UV + vec2(size.x, 0)).a;
		outline *= texture(TEXTURE, UV + vec2(0, -size.y)).a;
		if (rim_extra_thick) {
			outline *= texture(TEXTURE, UV + vec2(-size.x, size.y)).a;
			outline *= texture(TEXTURE, UV + vec2(size.x, size.y)).a;
			outline *= texture(TEXTURE, UV + vec2(-size.x, -size.y)).a;
			outline *= texture(TEXTURE, UV + vec2(size.x, -size.y)).a;
		}
		outline = 1.0 - outline;

		vec4 color = texture(TEXTURE, UV);
		float rim_cap = outline * color.a * rim_intense;
		LIGHT += rim_cap;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/rim_light = false
shader_param/rim_thickness = 5.0
shader_param/rim_intense = 1.0
shader_param/rim_extra_thick = false

[sub_resource type="CapsuleShape2D" id=3]
radius = 24.0
height = 135.988

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 96 ]
}

[sub_resource type="Animation" id=5]
length = 0.24
step = 0.08
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -240, -0.124862, -7.03592, 0.124862, 7.03592, -88, -0.0400193, -72.4668, 0.0400193, 72.4668 ),
"times": PoolRealArray( 0, 0.24 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CollisionShape2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -250, -0.1794, 3.00079, 0.1794, -3.00079, -88, -0.0146588, -152.599, 0.0301829, 93.9659 ),
"times": PoolRealArray( 0, 0.24 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62 ]
}

[sub_resource type="Animation" id=6]
length = 0.24
step = 0.08
tracks/0/type = "bezier"
tracks/0/path = NodePath("CollisionShape2D:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -88, -0.00502319, 106.56, 0.00502319, -106.56, -250, -0.147225, -7.03592, 0.147225, 7.03592 ),
"times": PoolRealArray( 0, 0.16 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -88, -0.0103435, 112.82, 0.0103435, -112.82, -240, -0.25, 0, 0.702084, -0.7966 ),
"times": PoolRealArray( 0, 0.24 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50 ]
}

[sub_resource type="Animation" id=7]
length = 0.16
step = 0.08
tracks/0/type = "bezier"
tracks/0/path = NodePath("CollisionShape2D:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -26, -0.25, 0, 0.167926, -1, -88, -0.000462085, 56.5, 0.25, 0 ),
"times": PoolRealArray( 0, 0.16 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -90, -0.25, 0, 0.187028, 0, 0, -0.00588682, -76.5, 0.25, 0 ),
"times": PoolRealArray( 0, 0.16 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 84, 85, 86 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("LeftFoot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("RightFoot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.16
step = 0.08
tracks/0/type = "bezier"
tracks/0/path = NodePath("CollisionShape2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2.25291e-12, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.16 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CollisionShape2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -88, -0.00417556, -69.2922, 0.00147765, 70.8863, -24, -0.145248, 3.68, 0.145248, -3.68 ),
"times": PoolRealArray( 0, 0.16 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.00443294, 42.2232, 0.00443294, -42.2232, -89.9999, -0.190098, 4.06333, 0.652602, -2.62333 ),
"times": PoolRealArray( 0, 0.16 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74 ]
}

[sub_resource type="Animation" id=10]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -88 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -88 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("AnimationPlayer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "run", -1, 1.0, false ],
"method": "play"
} ]
}

[node name="Player" type="Area2D"]
script = ExtResource( 2 )
run_sound = ExtResource( 6 )
jump_sounds = [ ExtResource( 3 ) ]
slide_sounds = [ ExtResource( 7 ) ]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, -88 )
scale = Vector2( 1.1, 0.908163 )
texture = ExtResource( 1 )
vframes = 9
hframes = 12
frame = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -88 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/die = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/rise = SubResource( 7 )
anims/run = SubResource( 8 )
anims/slide = SubResource( 9 )
anims/start = SubResource( 10 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="VoiceAudio" type="AudioStreamPlayer" parent="."]
volume_db = -6.0
bus = "SFX"

[node name="RightFoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="LeftFoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="JumpTimer" to="." method="fall"]
[connection signal="timeout" from="SlideTimer" to="." method="rise"]
